<resources>
    <string name="app_name">Khajit-app</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_guest">Continue As Guest</string>
    <string name="action_sign_google">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="server_client_id">"376065553090-e87ovifpgtat2eocv3eme7rjj8cra6l3.apps.googleusercontent.com"</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_equipments">Equipments</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Mailbox</string>
    <string name="go_notification_detail">Go To Details</string>
    <string name="notificationDetailTest">Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_feed_page">HomeFeedPageActivity</string>
</resources>
