<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.project.khajit_app.activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.project.khajit_app.activity.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_mailbox" />

    <fragment
        android:id="@+id/navigation_equipments"
        android:name="com.project.khajit_app.activity.ui.equipment.SettingsFragment"
        android:label="@string/title_equipments"
        tools:layout="@layout/fragment_mailbox" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.project.khajit_app.activity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_mailbox"
        android:name="com.project.khajit_app.activity.ui.mailbox.MailboxFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_mailbox" />
</navigation>